Update to cofundher

--- a/emailtemplates/forgetPassword.html
+++ b/emailtemplates/forgetPassword.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cofundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
                           alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          src="https://cofundher.com/assets/img/cofundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -86,7 +86,7 @@
                     <td style="text-align: center;">
                       <p>
                         <a
-                          href="https://gofundher.com/reset-password?verifylink={hashId}&user={verifingUser}"
+                          href="https://cofundher.com/reset-password?verifylink={hashId}&user={verifingUser}"
                           style="
                             display: inline-block;
                             background: #9e9e9e;
