--- a/emailtemplates/paypalTemplate.html
+++ b/emailtemplates/paypalTemplate.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cofundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
                           alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          src="https://cofundher.com/assets/img/cofundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
