--- a/emailtemplates/ReceivedMonthlyUser.html
+++ b/emailtemplates/ReceivedMonthlyUser.html
@@ -19,9 +19,9 @@
               <tbody>
                 <tr>
                   <td align="center" style="text-align:center;background: #fff;padding: 20px 0px 10px;">
-                    <a href="https://gofundher.com"
+                    <a href="https://cofundher.com"
                       style="text-decoration:none;display: inline-block;                            " target="_blank">
-                      <img alt="gofundher" src="https://gofundher.com/assets/img/gofundher-logo-new.png" width="180"
+                      <img alt="gofundher" src="https://cofundher.com/assets/img/gofundher-logo-new.png" width="180"
                         class="CToWUd" />
                     </a>
                   </td>
@@ -38,8 +38,8 @@
                     <p>{comment}</p>
                     <p>You will receive next monthly donation on {date}.</p>
                     
-                    <p> To manage your donations with your GoFundHer account.<a href="https://gofundher.com/login"
-                      alt="Login"> Login </a> or <a href="https://gofundher.com/join" alt="Join Now"> Join Now <a>.
+                    <p> To manage your donations with your GoFundHer account.<a href="https://cofundher.com/login"
+                      alt="Login"> Login </a> or <a href="https://cofundher.com/join" alt="Join Now"> Join Now <a>.
                     </p>
                     <p style="margin: 0px">Thank You,</p>
                     <p style="margin: 0px">GoFundHer</p>
