--- a/emailtemplates/ReceivedOnetimeUser.html
+++ b/emailtemplates/ReceivedOnetimeUser.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cofundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
                           alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          src="https://cofundher.com/assets/img/gofundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -73,8 +73,8 @@
                         this contribution helps you move closer to your goals.
                       </p>
                     <p>{comment}</p>
-                    <p>To manage your donations with your GoFundHer account. <a href="https://gofundher.com/login"
-                        alt="Login"> Login </a> or <a href="https://gofundher.com/join" alt="Join Now"> Join Now </a>.
+                    <p>To manage your donations with your GoFundHer account. <a href="https://cofundher.com/login"
+                        alt="Login"> Login </a> or <a href="https://cofundher.com/join" alt="Join Now"> Join Now </a>.
                       </p>
                       <p style="margin: 0px">Thank You,</p>
                       <p style="margin: 0px">GoFundHer</p>
