--- a/emailtemplates/monthlyProject.html
+++ b/emailtemplates/monthlyProject.html
@@ -37,13 +37,13 @@
                       style="text-align:center;background: #fff;padding: 20px 0px 10px;"
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cofundher.com"
                         style="text-decoration:none;display: inline-block;                            "
                         target="_blank"
                       >
                         <img
                           alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          src="https://cofundher.com/assets/img/cofundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -62,10 +62,10 @@
                       </p>
                       
                 <p>If you wish to change or cancel your donation, you can do so at any time through the <b> Active Donation</b> section on your dashboard.</p>
-                <p>To manage your donations with your GoFundHer account. <a href="https://gofundher.com/login"
-                  alt="Login"> Login </a> or <a href="https://gofundher.com/join" alt="Join Now"> Join Now </a>.
+                <p>To manage your donations with your GoFundHer account. <a href="https://cofundher.com/login"
+                  alt="Login"> Login </a> or <a href="https://cofundher.com/join" alt="Join Now"> Join Now </a>.
                 </p>
-                      <p>Feel free to Contact <a href="mailto:info@GoFundHer.com"> info@GoFundHer.com </a> if you need help.</p>
+                      <p>Feel free to Contact <a href="mailto:info@CoFundHer.com"> info@CoFundHer.com </a> if you need help.</p>
                       <p style="margin: 0px">Thank You,</p>
                       <p style = "margin: 0px">GoFundHer</p>
                     </td>
