--- a/emailtemplates/registration.html
+++ b/emailtemplates/registration.html
@@ -20,11 +20,11 @@
                                 <tr>
                                     <td align="center"
                                         style="text-align:center;background: #fff;padding: 20px 0px 10px;">
-                                        <a href="https://gofundher.com"
+                                        <a href="https://cofundher.com"
                                             style="text-decoration:none;display: inline-block;                            "
                                             target="_blank">
                                             <img alt="gofundher"
-                                                src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                                                src="https://cofundher.com/assets/img/gofundher-logo-new.png"
                                                 width="180" class="CToWUd" />
                                         </a>
                                     </td>
@@ -38,13 +38,13 @@
                                        
                                         <p>
                                             <ol>
-                                                <li>Connect a bank account to get paid<br> <a href="https://gofundher.com/get-paid-now
-                " alt="https://gofundher.com/get-paid-now
-                "> https://gofundher.com/get-paid-now </a></br> </li> 
+                                                <li>Connect a bank account to get paid<br> <a href="https://cofundher.com/get-paid-now
+                " alt="https://cofundher.com/get-paid-now
+                "> https://cofundher.com/get-paid-now </a></br> </li> 
                                                 </br>
-                                                <li>Choose your link <b>GoFundHer.com</b>/_____<br> <a href="https://gofundher.com/my-profile
-                                " alt="https://gofundher.com/my-profile
-                                "> https://gofundher.com/my-profile </a> </br></li>
+                                                <li>Choose your link <b>GoFundHer.com</b>/_____<br> <a href="https://cofundher.com/my-profile
+                                " alt="https://cofundher.com/my-profile
+                                "> https://cofundher.com/my-profile </a> </br></li>
                                             </ol>
                                         </p>
                                         <p style="margin: 0px">Thank You,</p>
