--- a/emailtemplates/transferSuccess.html
+++ b/emailtemplates/transferSuccess.html
@@ -37,13 +37,13 @@
                       style="text-align:center;background: #fff;padding: 20px 0px 10px;"
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cofundher.com"
                         style="text-decoration:none;display: inline-block;                            "
                         target="_blank"
                       >
                         <img
                           alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          src="https://cofundher.com/assets/img/gofundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -66,7 +66,7 @@
                         </p>
                         <p> 
                           If you have any further question please.
-                          <a href="https://support.gofundher.com/hc/en-us/requests/new"
+                          <a href="https://support.cofundher.com/hc/en-us/requests/new"
                           alt="contact us"> Contact Us </a>.
                       </p>
                       </p>
