--- a/emailtemplates/unsubscribeUser.html
+++ b/emailtemplates/unsubscribeUser.html
@@ -51,13 +51,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cofundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
                           alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          src="https://cofundher.com/assets/img/gofundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -81,11 +81,11 @@
                       </p>
                       <p>
                         To manage your donations with your GoFundHer account.
-                        <a href="https://gofundher.com/login" alt="Login"
+                        <a href="https://cofundher.com/login" alt="Login"
                           >Login</a
                         >
                         or
-                        <a href="https://gofundher.com/join" alt="Join Now"
+                        <a href="https://cofundher.com/join" alt="Join Now"
                           >Join Now</a
                         >.
                       </p>
