change gofundher to cashfundher
All match cases are implemented

--- a/emailtemplates/contactus.html
+++ b/emailtemplates/contactus.html
@@ -73,13 +73,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
