--- a/emailtemplates/registration.html
+++ b/emailtemplates/registration.html
@@ -20,11 +20,11 @@
                                 <tr>
                                     <td align="center"
                                         style="text-align:center;background: #fff;padding: 20px 0px 10px;">
-                                        <a href="https://gofundher.com"
+                                        <a href="https://cashfundher.com"
                                             style="text-decoration:none;display: inline-block;                            "
                                             target="_blank">
-                                            <img alt="gofundher"
-                                                src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                                            <img alt="cashfundher"
+                                                src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                                                 width="180" class="CToWUd" />
                                         </a>
                                     </td>
@@ -33,22 +33,22 @@
                                     <td style="font-family:sans-serif;padding: 15px 20px;">
                                         <p style="text-transform: capitalize;">{first_name} {last_name},</p>
                                         <p>
-                                            Your GoFundHer.com account is ready! Let’s take these 2 steps to success.
+                                            Your CashFundHer.com account is ready! Let’s take these 2 steps to success.
                                         </p>
                                        
                                         <p>
                                             <ol>
-                                                <li>Connect a bank account to get paid<br> <a href="https://gofundher.com/get-paid-now
-                " alt="https://gofundher.com/get-paid-now
-                "> https://gofundher.com/get-paid-now </a></br> </li> 
+                                                <li>Connect a bank account to get paid<br> <a href="https://cashfundher.com/get-paid-now
+                " alt="https://cashfundher.com/get-paid-now
+                "> https://cashfundher.com/get-paid-now </a></br> </li> 
                                                 </br>
-                                                <li>Choose your link <b>GoFundHer.com</b>/_____<br> <a href="https://gofundher.com/my-profile
-                                " alt="https://gofundher.com/my-profile
-                                "> https://gofundher.com/my-profile </a> </br></li>
+                                                <li>Choose your link <b>CashFundHer.com</b>/_____<br> <a href="https://cashfundher.com/my-profile
+                                " alt="https://cashfundher.com/my-profile
+                                "> https://cashfundher.com/my-profile </a> </br></li>
                                             </ol>
                                         </p>
                                         <p style="margin: 0px">Thank You,</p>
-                                        <p style="margin: 0px">GoFundHer</p>
+                                        <p style="margin: 0px">CashFundHer</p>
                                     </td>
                                 </tr>
                             </tbody>
