--- a/emailtemplates/unsubscribeProject.html
+++ b/emailtemplates/unsubscribeProject.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -79,17 +79,17 @@
                         your account.
                       </p>
                       <p>
-                        To manage your donations with your GoFundHer account.
-                        <a href="https://gofundher.com/login" alt="Login"
+                        To manage your donations with your CashFundHer account.
+                        <a href="https://cashfundher.com/login" alt="Login"
                           >Login</a
                         >
                         or
-                        <a href="https://gofundher.com/Join" alt="Join Now">
+                        <a href="https://cashfundher.com/Join" alt="Join Now">
                           Join Now </a
                         >.
                       </p>
                       <p style="margin: 0px;">Thank You,</p>
-                      <p style="margin: 0px;">GoFundHer</p>
+                      <p style="margin: 0px;">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
