--- a/emailtemplates/forgetPassword.html
+++ b/emailtemplates/forgetPassword.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -86,7 +86,7 @@
                     <td style="text-align: center;">
                       <p>
                         <a
-                          href="https://gofundher.com/reset-password?verifylink={hashId}&user={verifingUser}"
+                          href="https://cashfundher.com/reset-password?verifylink={hashId}&user={verifingUser}"
                           style="
                             display: inline-block;
                             background: #9e9e9e;
@@ -108,7 +108,7 @@
                   <tr>
                     <td style="font-family: sans-serif; padding: 15px 20px;">
                       <p style="margin: 0px;">Thank You,</p>
-                      <p style="margin: 0px;">GoFundHer</p>
+                      <p style="margin: 0px;">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
