--- a/emailtemplates/oneTimeProject.html
+++ b/emailtemplates/oneTimeProject.html
@@ -37,13 +37,13 @@
                       style="text-align:center;background: #fff;padding: 20px 0px 10px;"
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration:none;display: inline-block;                            "
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -58,12 +58,12 @@
                          Thank you for your contribution of
                         <b>${amount}</b> to the project <b>{name}.</b>
                         <p style="margin: 0px"> 
-                          To manage your donations with your GoFundHer account.<a href="https://gofundher.com/login"
-                          alt="Login"> Login </a> or <a href="https://gofundher.com/join" alt="Join Now"> Join Now </a>.
+                          To manage your donations with your CashFundHer account.<a href="https://cashfundher.com/login"
+                          alt="Login"> Login </a> or <a href="https://cashfundher.com/join" alt="Join Now"> Join Now </a>.
                       </p>
                       </p>
                       <p style="margin: 0px">Thank You,</p>
-                      <p style = "margin: 0px">GoFundHer</p>
+                      <p style = "margin: 0px">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
