--- a/emailtemplates/paypalTemplate.html
+++ b/emailtemplates/paypalTemplate.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -81,7 +81,7 @@
                   <tr>
                     <td style="font-family: sans-serif; padding: 15px 20px;">
                       <p style="margin: 0px;">Thank You,</p>
-                      <p style="margin: 0px;">GoFundHer</p>
+                      <p style="margin: 0px;">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
