--- a/emailtemplates/projectNewComment.html
+++ b/emailtemplates/projectNewComment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>GoFundHer</title>
+    <title>CashFundHer</title>
   </head>
   <body>
     <div
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://gofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://gofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -70,7 +70,7 @@
                         Hello {fullName}, you have a new comment on your sponsor page {projectName}.
                       </p>
                       <p style="margin: 0px;">Thank You,</p>
-                      <p style="margin: 0px;">GoFundHer</p>
+                      <p style="margin: 0px;">CashFundHer</p>
                     </td>
                   </tr>
                 </tbody>
