change go/cofund to cashfund

--- a/emailtemplates/donationRenewalProject.html
+++ b/emailtemplates/donationRenewalProject.html
@@ -37,13 +37,13 @@
                       style="text-align:center;background: #fff;padding: 20px 0px 10px;"
                     >
                       <a
-                        href="https://cofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration:none;display: inline-block;                            "
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://cofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -62,11 +62,11 @@
                       </p>
                       </p>
                       <p>If you wish to  unsubscribe this donation, you can do so at any time through the<b> Active Donation</b> section on your dashboard.</p>
-                      <p>To manage your donations with your GoFundHer account. <a href="https://cofundher.com/login"
-                        alt="Login"> Login </a> or <a href="https://cofundher.com/join" alt="Join Now"> Join Now </a>.</p>
-                      <p>Feel free to Contact info@CoFundHer.com if you need any help.</p>
+                      <p>To manage your donations with your CashFundHer account. <a href="https://cashfundher.com/login"
+                        alt="Login"> Login </a> or <a href="https://cashfundher.com/join" alt="Join Now"> Join Now </a>.</p>
+                      <p>Feel free to Contact info@CashFundHer.com if you need any help.</p>
                       <p style="margin: 0px">Thank You,</p>
-                      <p style = "margin: 0px">GoFundHer</p>
+                      <p style = "margin: 0px">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
