--- a/emailtemplates/transferSuccess.html
+++ b/emailtemplates/transferSuccess.html
@@ -37,13 +37,13 @@
                       style="text-align:center;background: #fff;padding: 20px 0px 10px;"
                     >
                       <a
-                        href="https://cofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration:none;display: inline-block;                            "
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://cofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -66,12 +66,12 @@
                         </p>
                         <p> 
                           If you have any further question please.
-                          <a href="https://support.cofundher.com/hc/en-us/requests/new"
+                          <a href="https://support.cashfundher.com/hc/en-us/requests/new"
                           alt="contact us"> Contact Us </a>.
                       </p>
                       </p>
                       <p style="margin: 0px">Thank You,</p>
-                      <p style = "margin: 0px">GoFundHer</p>
+                      <p style = "margin: 0px">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
