--- a/emailtemplates/monthlyUser.html
+++ b/emailtemplates/monthlyUser.html
@@ -37,13 +37,13 @@
                       style="text-align:center;background: #fff;padding: 20px 0px 10px;"
                     >
                       <a
-                        href="https://cofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration:none;display: inline-block;                            "
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://cofundher.com/assets/img/cofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -60,13 +60,13 @@
                       <p>Your next monthly donation will be on {date}.</p>
                       </p>
                       <p> If you wish to change or cancel your donation, you can do so at any time through the <b> Active Donation  </b>section on your dashboard.</p>
-                      <p>To manage your donations with your GoFundHer account.<a href="https://cofundher.com/login"
-                        alt="Login"> Login </a> or <a href="https://cofundher.com/join" alt="Join Now."> Join Now </a>.
+                      <p>To manage your donations with your CashFundHer account.<a href="https://cashfundher.com/login"
+                        alt="Login"> Login </a> or <a href="https://cashfundher.com/join" alt="Join Now."> Join Now </a>.
                       </p>
-                      <p>Feel free to Contact <a href="mailto:info@CoFundHer.com"> info@CoFundHer.com </a> if you need help.
+                      <p>Feel free to Contact <a href="mailto:info@CashFundHer.com"> info@CashFundHer.com </a> if you need help.
                       </p>
                       <p style="margin: 0px">Thank You,</p>
-                      <p style = "margin: 0px">GoFundHer</p>
+                      <p style = "margin: 0px">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
