--- a/emailtemplates/oneTimeUser.html
+++ b/emailtemplates/oneTimeUser.html
@@ -50,13 +50,13 @@
                       "
                     >
                       <a
-                        href="https://cofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://cofundher.com/assets/img/cofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -72,17 +72,17 @@
                         <b>${amount}</b> to <b>{name} {lastName}.</b>
                       </p>
                       <p>
-                        To manage your donations with your GoFundHer account.
-                        <a href="https://cofundher.com/login" alt="Login">
+                        To manage your donations with your CashFundHer account.
+                        <a href="https://cashfundher.com/login" alt="Login">
                           Login
                         </a>
                         or
-                        <a href="https://cofundher.com/join" alt="Join Now">
+                        <a href="https://cashfundher.com/join" alt="Join Now">
                           Join Now </a
                         >.
                       </p>
                       <p style="margin: 0px;">Thank You,</p>
-                      <p style="margin: 0px;">GoFundHer</p>
+                      <p style="margin: 0px;">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
