--- a/emailtemplates/unsubscribeFundraiser.html
+++ b/emailtemplates/unsubscribeFundraiser.html
@@ -51,13 +51,13 @@
                       "
                     >
                       <a
-                        href="https://cofundher.com"
+                        href="https://cashfundher.com"
                         style="text-decoration: none; display: inline-block;"
                         target="_blank"
                       >
                         <img
-                          alt="gofundher"
-                          src="https://cofundher.com/assets/img/gofundher-logo-new.png"
+                          alt="cashfundher"
+                          src="https://cashfundher.com/assets/img/cashfundher-logo-new.png"
                           width="180"
                           class="CToWUd"
                         />
@@ -86,17 +86,17 @@
                         cancelled . You won't recive any monthly fund by <b>{name} {lastName} </b> in the future.
                       </p> -->
                       <!-- <p>
-                        To manage your donations with your GoFundHer account.
-                        <a href="https://cofundher.com/login" alt="Login"
+                        To manage your donations with your CashFundHer account.
+                        <a href="https://cashfundher.com/login" alt="Login"
                           >Login</a
                         >
                         or
-                        <a href="https://cofundher.com/join" alt="Join Now"
+                        <a href="https://cashfundher.com/join" alt="Join Now"
                           >Join Now</a
                         >.
                       </p> -->
                       <p style="margin: 0px;">Thank You,</p>
-                      <p style="margin: 0px;">GoFundHer</p>
+                      <p style="margin: 0px;">CashFundHer</p>
                     </td>
                   </tr>
                   <!-- <tr>
